--- a/whatsappreactapp/src/pages/Main/style.css
+++ b/whatsappreactapp/src/pages/Main/style.css
@@ -1,22 +1,36 @@
-.Main{
-    width: 100vw;
-    height: 100vh;
-    background-color: red;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.Main {
+  width: 100vw;
+  height: 100vh;
+  background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-.Main .sub-main{
-    width: 500px;
-    height: 500px;
-    background-color: green;
+.Main .sub-main {
+  width: 500px;
+  height: 500px;
+  background-color: green;
 }
 
-@media only screen and (min-width:700px){
+.header-left {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: yellow;
+}
+.header-right {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: pink;
+}
+.header-right-1 {
+  /* display: flex;  */
+  /* justify-content: center;
+  align-items: center;  */
+  background-color: green; 
+}
 
-    .Main .sub-main{
-        width: 100%;
-        height: 100%;
-        background-color: yellow;
-    }
+.img {
+  border-radius: 50%;
 }
